made some changes in the service, reposititories and handlers because of adding new entities
